--- a/Day33/index.html
+++ b/Day33/index.html
@@ -1,227 +1,124 @@
 
 <!DOCTYPE html>
+
 <html lang="en">
 
 <head>
+
     <meta charset="UTF-8">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Deepa's Works</title>
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-    
+
+    <title>Training Portfolio</title>
+
+    <style>
+
+        body {
+
+            font-family: 'Times New Roman', Times, serif;
+
+            background-color: #f4f4f4;
+
+            margin: 0;
+
+            padding: 20px;
+
+        }
+
+        .container {
+
+            max-width: 600px;
+
+            margin: 0 auto;
+
+            background: #fff;
+
+            padding: 20px;
+
+            border-radius: 8px;
+
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
+        }
+
+        h1 {
+
+            text-align: center;
+
+            color: #333;
+
+        }
+
+        ul {
+
+            list-style-type: none;
+
+            padding: 0;
+
+        }
+
+        li {
+
+            margin: 10px 0;
+
+        }
+
+        a {
+
+            text-decoration: none;
+
+            color: #007BFF;
+
+        }
+
+        a:hover {
+
+            text-decoration: underline;
+
+        }
+
+    </style>
+
 </head>
+
 <body>
-    <h1>This is for Training Purpose </h1>
-    <h2>Deepa's Works</h2>
-    <h3>Web Page with Icon</h3>
-    <a href="http://www.google.com"> GoTo Google </a>
-    <ul>
-        <li>
-            <a href="Day3/next-section.html"> Day3-structural-tags </a>
-        </li>
-        <li>
-            <a href="Day4/blockinline.html"> Day4-1-Block and InLine tags </a><br>
-            <ul>
-                <a href="Day4/cascading.html">2-Cascade tags </a>
-            </ul>
-        </li>
 
-        <li>
-            <a href="Day5/1.selector.html"> Day5-1-CSS Selectors </a>
-            <ul>
-                <li>
-                    <a href="Day5/Lab_program.html"> Lab Program </a>
-                </li>
-            </ul>
-        </li>
+    <div class="container">
 
-        <li>
-            <a href="Day6/1_emp-reg.html"> Day6_Employee Registration Form </a>
-            <ul>
-                <li>
-                    <a href="Day6/Signin_lab_program.html"> Lab Program </a>
-                </li>
-            </ul>
-        </li>
+        <h1>Training Portfolio Page</h1>
 
+        <ol>
 
-        <li>
-            <a href="Day7/table.html"> Day7-About_Table </a>
-            <ul>
-                <li>
-                    <a href="Day7/iframe.html"> IFrame </a>
-                </li>
-                <li>
-                    <a href="Day7/contact_us.html"> Lab Program </a>
-                </li>
-            </ul>
-        </li>
+            <li><a href="akhi-html-app">Akhilesh Rathnakaran</a></li>
 
+            <li><a href="deepa-html-app">Deepa Shanmugasundram</a></li>
 
-        <li>
-            <a href="Day8/media.html"> Day8-Audio video & CSS Selecters </a>
-            <ul>
-                <li>
-                    <a href="Day8/media.html"> Media Tags </a>
-                </li>
-                <li>
-                    <a href="Day8/selecters.html"> CSS Selecters </a>
-                </li>
-            </ul>
-        </li>
+            <li><a href="Jayapreethi-html-app">Jaya Preethi</a></li>
 
+            <li><a href="Kannan-html-app">Kannan</a></li>
 
-        <li>
-            <a href="Day9/media.html"> Day9-Box Model & Font Size </a>
-            <ul>
-                <li>
-                    <a href="Day9/boxmodel.html"> Box Model </a>
-                </li>
-                <li>
-                    <a href="Day9/Rfontsize.html"> Relative Font size </a>
-                </li>
-                <li>
-                    <a href="Day9/labprogram.html"> labprogram </a>
-                </li>
-            </ul>
-        </li>
+            <li><a href="markonda-html-app">Markonda Reddy</a></li>
 
+            <li><a href="mathi-html-app">Mathimagal Alagiri</a></li>
 
-        <li>
-            Day10 - JavaScript
-            <ul>
-                <li>
-                    <a href="Day10/JavaScript.html"> Understanding JavaScript </a>
-                </li>
-                <li>
-                    <a href="Day10/JavaScriptEvents.html"> JavaScript Events </a>
-                </li>
-            </ul>
-        </li>
+            <li><a href="minu-html-app">Minu Pankajakshy Amma</a></li>
 
+            <li><a href="prem-html-app">Premnath Mathiazhagan</a></li>
 
-        <li>
-            Day11 - Dom Manipulation
-            <ul>
-                <li>
-                    <a href="Day11/DomManipulation.html"> Dom Manipulation </a>
-                </li>
-                <li>
-                    <a href="Day11/JSHoisting.html"> JavaScript Hoisting </a>
-                </li>
-                <li>
-                    <a href="Day11/LabProgram.html"> Lab Program </a>
-                </li>
-            </ul>
-        </li>
+            <li><a href="shh-app">Sachin Shivaji Hulawale</a></li>
 
-        <li>
-            Day12 - JavaScript Events
-            <ul>
-                <li>
-                    <a href="Day12/1_eventobject.html"> JavaScript Event Objects </a>
-                </li>
-                <li>
-                    <a href="Day12/2_eventdropdown.html"> JavaScript Dropdown Event </a>
-                </li>
-                <li>
-                    <a href="Day12/counter_task.html"> Lab Program </a>
-                </li>
-            </ul>
-        </li>
+            <li><a href="sachind-html-app">Sachin Vitthal Dhopte</a></li>
 
+            <li><a href="shalini-html-app">Shalini Kumari</a></li>
 
-        <li>
-            Day13 - Objects & Arrays
-            <ul>
-                <li>
-                    <a href="Day13/1_objectarray.html"> Object Array </a>
-                </li>
-                <li>
-                    <a href="Day13/2_constructorpattern.html"> Constructor Pattern </a>
-                </li>
-                <li>
-                    <a href="Day13/4_task_emp tble_constr_pttrn.html"> Lab Program </a>
-                </li>
-            </ul>
-        </li>
+            <li><a href="Jitendra-html-app">Thota Jitendra</a></li>
 
-        <li>
-            Day14 - Ajax
-            <ul>
-                <li>
-                    <a href="Day14/1_ajax.html"> Understanding Ajax</a>
-                </li>
-                <li>
-                    <a href="Day14/3_taskgiven_ajax.html"> Lab Program </a>
-                </li>
-            </ul>
-        </li>
+            <li><a href="venkat-html-app">Venkatesh Balagurunathan</a></li>
 
+        </ol>
 
-        <li>
-            Day16 - JQuery
-            <ul>
-                <li>
-                    <a href="Day16/Jquery.html"> Understanding jQuery</a>
-                </li>
-                <li>
-                    <a href="Day16/Slider.html"> Slider Program </a>
-                </li>
-                <li>
-                    <a href="Day16/counter_task.html"> Lab Program </a>
-                </li>
-            </ul>
-        </li>
+    </div>
 
-        <li>
-            <a href="https://github.com/Dee-2025/DeepaSundaramTraining"> Day 17 -Intro to .Net/C#</a>
-        </li>
-        <li>
-            <a href="https://github.com/Dee-2025/DeepaSundaramTraining"> Day 18 -Commandline arguments</a>
-        </li>
-        <li>
-            <a href="https://github.com/Dee-2025/DeepaSundaramTraining"> Day 20 -Function Overloading</a>
-        </li>
-        <li>
-            <a href="https://github.com/Dee-2025/DeepaSundaramTraining"> Day 21 -Encapsulation</a>
-        </li>
-        <li>
-            <a href="https://github.com/Dee-2025/DeepaSundaramTraining"> Day 22 -Properties</a>
-        </li>
-        <li>
-            <a href="https://github.com/Dee-2025/DeepaSundaramTraining"> Day 23 -Oops Concepts</a>
-        </li>
-        <li>
-            <a href="https://github.com/Dee-2025/DeepaSundaramTraining"> Day 24 -Constructor</a>
-        </li>
-        <li>
-            <a href="https://github.com/Dee-2025/DeepaSundaramTraining"> Day 25 -Constructor</a>
-        </li>
-        <li>
-            <a href="https://github.com/Dee-2025/DeepaSundaramTraining"> Day 26 -Constructor</a>
-        </li>
-        <li>
-            <a href="https://github.com/Dee-2025/DeepaSundaramTraining"> Day 27 -Inheritance and Polymorphisam</a>
-        </li>
-        <li>
-            <a href="https://github.com/Dee-2025/DeepaSundaramTraining"> Day 28 -Equals &Aacute; Constructor Inheritance</a>
-        </li>
-        <!--<li>
-        <a href="https://github.com/Dee-2025/DeepaSundaramTraining"> Day 29 -Functions</a>
-    </li>
-    <li>
-        <a href="https://github.com/Dee-2025/DeepaSundaramTraining"> Day 30 -Functions</a>
-    </li>-->
-        <li>
-            <a href="https://github.com/Dee-2025/DeepaSundaramTraining"> Day 31 -Interface</a>
-        </li>
-        <li>
-            <a href="https://github.com/Dee-2025/DeepaSundaramTraining"> Day 32 -Exceptions</a>
-        </li>
-        <li>
-            <a href="https://github.com/Dee-2025/DeepaSundaramTraining"> Day 33 -Custom Exceptions</a>
-        </li>
-
-    </ul>
 </body>
+
 </html>
